[package]
name = "pti"
version = "0.1.0"
authors = ["Nico Westerbeck <Nico.Westerbeck@mailbox.tu-dresden.de>"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
crossterm = "0.26.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
ratatui = "0.21.0"
tui-textarea = { git = "https://github.com/haydenflinner/tui-textarea.git", version = "*", features = ["ratatui-crossterm"], default-features=false }